--- a/section.css
+++ b/section.css
@@ -204,7 +204,7 @@ img {
   padding: 10px 10px 10px 20px;
 }
 
-.founder-box p.subheader {
+.founder-box .subheader {
   background-color: #665393;
   font-family: "Source Sans Pro", sans-serif;
   font-size: 12px;
@@ -282,8 +282,8 @@ img {
 border-radius: 10px;
 background-color: rgba(0,0,0,.65);
 padding: 15px;
-margin-right: -30px;
 margin-bottom: 10px;
+width: 65%;
 
 }
 
@@ -300,6 +300,7 @@ overflow: hidden;
 .champion-information {
   display: inline-block;
   vertical-align: top;
+  width: 80%;
 
 }
 .champion-title {
@@ -315,6 +316,7 @@ overflow: hidden;
   font-size: 14px;
   color: #fff;
 font-family: "Source Sans Pro", sans-serif;
+overflow: hidden;
 }
 
 .champion-video video{
